made the home and non_home nav bar. and fix the alignment issue for the house page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,39 +51,48 @@ a:hover, a:active, a:focus {
   text-decoration: underline;
 }
 
-#main_nav_bar {
+#non_home_nav_bar {
+  background-image: url(non_home_nav/nav_bar_bg_no_orange.png);
+  background-repeat: no-repeat;
+  background-position: center, top;
+  width: $max-width;
+  height: 102px;
+  float: left;
+}
+
+#home_nav_bar {
 	background-image: url(home_images/nav_bar_bg.png);
 	background-repeat: no-repeat;
 	background-position: center, top;
 	width: $max-width;
 	height: 105px;
-	
-	#logo {
-    margin-left: 45px;
-    margin-right: 20px;
-    float: left;
-  }
+}
+
+#logo {
+  margin-left: 45px;
+  margin-right: 20px;
+  float: left;
+}
+
+.main_nav_button {
+  width:auto;
+  height: 50px;
+  float: left;
+  margin-top: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  font-family: "Arial Black", Gadget, sans-serif;
+  font-size: 32px;
+  color: #00cccc;
+  font-weight: bold;
   
-	.main_nav_button {
-    width:auto;
-    height: 50px;
-    float: left;
-    margin-top: 10px;
-    margin-left: 30px;
-    margin-right: 30px;
-    font-family: "Arial Black", Gadget, sans-serif;
-    font-size: 32px;
-    color: #00cccc;
-    font-weight: bold;
-    
-    .main_nav_button_sub {
-      color: #FFFFFF;
-      font-size: 20px;
-      font-family: "Arial", Gadget, sans-serif;
-      font-weight: normal;
-      margin-top: -5px;
-      text-align: center;
-    }
+  .main_nav_button_sub {
+    color: #FFFFFF;
+    font-size: 20px;
+    font-family: "Arial", Gadget, sans-serif;
+    font-weight: normal;
+    margin-top: -5px;
+    text-align: center;
   }
 }
 
